@startuml Override relations
!pragma useIntermediatePackages false

abstract class "AbstractEntity" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.AbstractEntity {
}
note top of io.gitlab.plunts.gradle.plantuml.examples.app.entity.AbstractEntity
  This class is abstract
end note
class "Car" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Car {
}
entity "ParkingSlot" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.ParkingSlot {
}
entity "Passenger" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Passenger {
}
class "SteeringWheel" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.SteeringWheel {
}
entity "Tire" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Tire {
}
class "Trip" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Trip {
}
entity "Truck" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Truck {
}
entity "Vehicle" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle {
}
enum "VehicleState" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.VehicleState {
}
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Car -u-|> io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Car "0..*" <--> "0..*" io.gitlab.plunts.gradle.plantuml.examples.app.entity.ParkingSlot
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Passenger <.u.x io.gitlab.plunts.gradle.plantuml.examples.app.entity.AbstractEntity
io.gitlab.plunts.gradle.plantuml.examples.app.entity.SteeringWheel <.u.x io.gitlab.plunts.gradle.plantuml.examples.app.entity.AbstractEntity
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Tire <.u.x io.gitlab.plunts.gradle.plantuml.examples.app.entity.AbstractEntity
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Trip .. io.gitlab.plunts.gradle.plantuml.examples.app.entity.Truck
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Truck -u-|> io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle <.u.x io.gitlab.plunts.gradle.plantuml.examples.app.entity.AbstractEntity
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle "1" *--> "0..*" io.gitlab.plunts.gradle.plantuml.examples.app.entity.Trip
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle "a" x--> "b" io.gitlab.plunts.gradle.plantuml.examples.app.entity.SteeringWheel : wheel
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle --> "1..*" io.gitlab.plunts.gradle.plantuml.examples.app.entity.VehicleState
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle "0..1" o.left.> "1..*" io.gitlab.plunts.gradle.plantuml.examples.app.entity.Passenger
@enduml
